--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.mysql-connector-java-8.0.13.jar=../mysql_jar_File/mysql-connector-java-8.0.13.jar
+file.reference.mysql-connector-java-8.0.13.jar-1=C:\\Users\\amsia\\Downloads\\mysql-connector-java-8.0.13.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -38,7 +39,8 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.13.jar}
+    ${file.reference.mysql-connector-java-8.0.13.jar}:\
+    ${file.reference.mysql-connector-java-8.0.13.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
